# ternexar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  V0_1_BUILD_PROMPT.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.ternexar/: error-memory.json
docs/: debug-log.md
examples/: safety_demo.md
src/ternexar/: analyze.py  ask.py  boot.py  cli.py  composer.py  config.py  do.py  health.py  history.py  installer_execute.py  installer_profiles.py  locator.py  main.py  memory.py  operator.py  patcher.py  plan.py  recovery.py  recovery_profiles.py  risk.py  router.py  runner.py  setup_assistant.py  ui.py  version_check.py  workspace_config.py
tests/: test_analyze.py  test_audit.py  test_cli.py  test_confirm.py  test_do.py  test_gate.py  test_history.py  test_installer_execute.py  test_memory.py  test_nmap_v2.py  test_operator.py  test_patcher.py  test_recovery.py  test_risk.py  test_router.py  test_setup_assistant.py  test_v1_4.py  test_v1_8.py
