[project]
name = "ternexar"
version = "1.8.0"
description = "A premium, safety-first AI command center."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "rich",
    "toml",
    "requests",
    "prompt_toolkit",
]

[project.scripts]
tx = "ternexar.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
